Hvis den sletter det her commit giver jeg op

--- a/Bejerholm Stenhuggeri/src/view/Panel_Lager.form
+++ b/Bejerholm Stenhuggeri/src/view/Panel_Lager.form
@@ -96,7 +96,7 @@
         <Property name="useNullLayout" type="boolean" value="false"/>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="sletVareButton">
+        <Component class="javax.swing.JButton" name="redigerVareButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Rediger vare"/>
           </Properties>
@@ -106,10 +106,13 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JButton" name="redigerVareButton">
+        <Component class="javax.swing.JButton" name="sletVareButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Slet vare"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="sletVareButtonActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="170" y="210" width="-1" height="-1"/>
