Så er lager færdigt(udover exception handling og opret lynsalg vare)

--- a/Bejerholm Stenhuggeri/src/view/Panel_Lager.form
+++ b/Bejerholm Stenhuggeri/src/view/Panel_Lager.form
@@ -100,6 +100,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Rediger vare"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="redigerVareButtonActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="250" y="210" width="-1" height="-1"/>
@@ -360,16 +363,16 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JComboBox" name="v&#xe6;lgVareGruppeComboBox">
+        <Component class="javax.swing.JButton" name="opretNyVareButton">
           <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="0"/>
-            </Property>
-            <Property name="enabled" type="boolean" value="false"/>
+            <Property name="text" type="java.lang.String" value="Opret ny vare"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="opretNyVareButtonActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="245" y="168" width="186" height="-1"/>
+              <AbsoluteConstraints x="63" y="210" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -408,16 +411,6 @@
         <Property name="useNullLayout" type="boolean" value="false"/>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="opretNyVareButton">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Opret ny vare"/>
-          </Properties>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="325" y="122" width="-1" height="-1"/>
-            </Constraint>
-          </Constraints>
-        </Component>
         <Component class="javax.swing.JButton" name="filtrerVarelistButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Filtrer"/>
@@ -427,7 +420,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="254" y="122" width="-1" height="-1"/>
+              <AbsoluteConstraints x="365" y="122" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
@@ -587,7 +580,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="41" y="126" width="-1" height="-1"/>
+              <AbsoluteConstraints x="41" y="125" width="-1" height="-1"/>
             </Constraint>
           </Constraints>
         </Component>
